Tema este gata. Am rezolvat checkstyle + am asezat codul + am rezolvat niste warninguri ca sa nu mai am asa multe.